--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+.idea/
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,windows,jupyternotebooks,pycharm,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,windows,jupyternotebooks,pycharm,visualstudiocode
 
